--- a/contacto.html
+++ b/contacto.html
@@ -42,7 +42,9 @@
         <div>
             <label for="Comentario">Comentario</label>
             <textarea name="Comentario" name=Comentario id="Comentario" cols="40" rows="10" ></textarea
-            ></div>
+            
+        ></div>
+        <input type= "submit" value= "Presiona para enviar"/>
     </fieldset>
     </form>
     </div>
