--- a/contacto.html
+++ b/contacto.html
@@ -16,6 +16,7 @@
     </ul    
     ></header>
     <main>
+        <link rel="stylesheet" href="css/estilos.css">
         <section>
         <h2>Formulario de contacto</h2>
         <div>
@@ -53,12 +54,14 @@
     <body>
         
     <section>
+        <main class="navegacion__lista">
         <div>
-            <h4><a href="index.html">Inicio</a></h4>
+            <h4><a class="navegador__sitio"  href="index.html">Inicio</a></h4>
         </div>
         <div>
-            <h4><a href="Productos y servicios.html">Productos y servicios</a></h4>
+            <h4><a class="navegador__sitio" href="Productos y servicios.html">Productos y servicios</a></h4>
         </div>
+    </main>
 
     </section>
     </body>
@@ -68,14 +71,14 @@
         <h4>Enlaces de interés</h4>
         <ul>
             <li>
-            <a href="https://www.argentina.gob.ar/" target="blank">Página Oficial del Gobierno</a>
+            <a class="navegador__link" href="https://www.argentina.gob.ar/" target="blank">Página Oficial del Gobierno</a>
         </li>
         <div>
-            <a href="https://www.potrerodigital.org/" target="blank">Página Oficial de Potrero Digital</a>
+            <a class="navegador__link" href="https://www.potrerodigital.org/" target="blank">Página Oficial de Potrero Digital</a>
         </div>
         <div>
             <h4>Redes Sociales</h4>
-            <a href="https://www.facebook.com/PasteleriaAilenn" target="blank"> Nuestro Facebook 😃 </a> 
+            <a class="navegador__link" href="https://www.facebook.com/PasteleriaAilenn" target="blank"> Nuestro Facebook 😃 </a> 
         </div>
     </ul>
     
