--- a/Productos y servicios.html
+++ b/Productos y servicios.html
@@ -7,10 +7,10 @@
     <title>Productos y servicios</title>
 </head>
 <header >
-    <img src="Image/Screenshot_2.png"  alt=""width= 1000 height="200">
+    
 </header>
 <body style= "background-color: rgb(219, 182, 194)";><!--Contenido visual-->
-    ---<link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
     <h1>Pasteleria Ailen</h1 >
     <h2>Elaboraciones propias</h2>
     <h3>Con los mejores productos de la región</h3>
