--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          
              <h1 class="titulo"> Bienvenidos a: </h1>
                 <div class="button-container">
-                <img src="image/WhatsApp Image 2021-09-20 at 19.37.08.jpeg" width="1024px" height="400px" alt="Inicio">
+                <img src="./Image/WhatsApp Image 2021-11-22 at 15.42.31.jpeg" width="1024px" height="400px" alt="Inicio">
                 <a href="https://www.facebook.com/PasteleriaAilenn" alt="Ingresar a red social">Facebook</a>
                 </div>
                 <!--<img src="Image\WhatsApp Image 2021-09-20 at 19.37.08.jpeg" alt="">--->
