--- a/Productos y servicios.html
+++ b/Productos y servicios.html
@@ -15,12 +15,11 @@
     <link rel="stylesheet" href="css/estilos.css" >
 
     <p ><h1 class="titulopro">Pasteleria Ailen</h1 ></p>
-    <h2>Elaboraciones propias</h2>
-    <h3>Con los mejores productos de la región</h3>
+    <h3 id=prime>Elaboraciones propias, con los mejores productos de la región</h3>
 
-       <h4> <p>Pastelería Ailén viene trabajando con una trayectoria de 17 años!!. Les presentamos nuestras delicatesses con las que pueden endulzar sus dias!!Que la pandemia no te detenga! Pasteleria Ailén te espera para que tus desayunos y meriendas sean tus momentos favoritos del día!❤️ 
+        <p id=prese>Pastelería Ailén viene trabajando con una trayectoria de 18 años!!. Les presentamos nuestras delicatesses con las que pueden endulzar sus dias!!Que la pandemia no te detenga! Pasteleria Ailén te espera para que tus desayunos y meriendas sean tus momentos favoritos del día!❤️ 
             Para endulzar estos días grises te ofrecemos estas delicias, no tardes que vuelan...!!😃💣</p>
-        </h4>
+        
            <div>
             <section class="carrusel1">
     
